[gd_scene load_steps=27 format=3 uid="uid://kywrsqro3d5i"]

[ext_resource type="Script" path="res://scripts/loading/gate_loader.gd" id="1_uxhy6"]
[ext_resource type="Resource" uid="uid://b1xvdym0qh6td" path="res://resources/gate_events.res" id="2_q7cvi"]
[ext_resource type="Resource" uid="uid://cmb7xvbue74qa" path="res://resources/sandbox_executable.tres" id="4_shus3"]
[ext_resource type="Script" path="res://scripts/sandbox/render_result.gd" id="5_nlg2s"]
[ext_resource type="Resource" uid="uid://l1quiaghft2f" path="res://resources/command_events.res" id="6_18mgg"]
[ext_resource type="Script" path="res://scripts/sandbox/sandbox_manager.gd" id="6_368sj"]
[ext_resource type="Script" path="res://scripts/sandbox/input_sync.gd" id="8_1blsi"]
[ext_resource type="Resource" uid="uid://bo6qgr210aamc" path="res://resources/sandbox_env.tres" id="8_a6dvr"]
[ext_resource type="Script" path="res://scripts/sandbox/sandbox_logger.gd" id="9_fikc8"]
[ext_resource type="Resource" uid="uid://crjhix0osmtnf" path="res://resources/ui_events.res" id="9_ir58h"]
[ext_resource type="Script" path="res://scripts/ui/world/world_canvas.gd" id="9_ncfxj"]
[ext_resource type="Shader" path="res://shaders/render_result.gdshader" id="10_2auwe"]
[ext_resource type="Texture2D" uid="uid://cykx425p6ylwr" path="res://assets/textures/background.png" id="10_23bjc"]
[ext_resource type="Script" path="res://scripts/sandbox/command_sync.gd" id="10_cqo55"]
[ext_resource type="Resource" uid="uid://cjcdum6fm4ta0" path="res://resources/api_settings.tres" id="10_vhc7k"]
[ext_resource type="Script" path="res://scripts/sandbox/process_checker.gd" id="11_72cjp"]
[ext_resource type="Script" path="res://scripts/ui/world/world_ui.gd" id="12_jdwjt"]
[ext_resource type="Script" path="res://scripts/ui/world/splash_screen.gd" id="13_3b6nd"]
[ext_resource type="PackedScene" uid="uid://c7571vjq7l0jp" path="res://scenes/components/not_responding.tscn" id="17_kwbm3"]
[ext_resource type="Script" path="res://scripts/ui/fullscreen_animation.gd" id="18_sx3kr"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_be6ex"]
resource_local_to_scene = true
shader = ExtResource("10_2auwe")
shader_parameter/ext_texture_is_bgra = null
shader_parameter/show_render = null

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ybg1t"]
bg_color = Color(0, 0, 0, 0.470588)

[sub_resource type="Animation" id="Animation_beyyv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WorldCanvas/RenderResult/HideOnPress:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("WorldCanvas/Blackout:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_tper3"]
resource_name = "fullscreen"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WorldCanvas/RenderResult/HideOnPress:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("WorldCanvas/Blackout:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_77flb"]
resource_name = "initial"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WorldCanvas/RenderResult/HideOnPress:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("WorldCanvas/Blackout:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_sld6k"]
_data = {
"RESET": SubResource("Animation_beyyv"),
"fullscreen": SubResource("Animation_tper3"),
"initial": SubResource("Animation_77flb")
}

[node name="World" type="Control" node_paths=PackedStringArray("render_result")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("12_jdwjt")
ui_events = ExtResource("9_ir58h")
gate_events = ExtResource("2_q7cvi")
command_events = ExtResource("6_18mgg")
render_result = NodePath("WorldCanvas/RenderResult")

[node name="GateLoader" type="Node" parent="."]
script = ExtResource("1_uxhy6")
gate_events = ExtResource("2_q7cvi")
connect_timeout = 10.0

[node name="SandboxManager" type="Node" parent="." node_paths=PackedStringArray("render_result", "snbx_logger")]
script = ExtResource("6_368sj")
gate_events = ExtResource("2_q7cvi")
render_result = NodePath("../WorldCanvas/RenderResult")
snbx_logger = NodePath("../SandboxLogger")
snbx_executable = ExtResource("4_shus3")
snbx_env = ExtResource("8_a6dvr")

[node name="SandboxLogger" type="Node" parent="."]
script = ExtResource("9_fikc8")
gate_events = ExtResource("2_q7cvi")
api = ExtResource("10_vhc7k")

[node name="InputSync" type="Node" parent="." node_paths=PackedStringArray("render_result")]
script = ExtResource("8_1blsi")
gate_events = ExtResource("2_q7cvi")
ui_events = ExtResource("9_ir58h")
render_result = NodePath("../WorldCanvas/RenderResult")

[node name="CommandSync" type="CommandSync" parent="."]
script = ExtResource("10_cqo55")
gate_events = ExtResource("2_q7cvi")
command_events = ExtResource("6_18mgg")

[node name="ProcessChecker" type="Node" parent="." node_paths=PackedStringArray("snbx_logger")]
script = ExtResource("11_72cjp")
gate_events = ExtResource("2_q7cvi")
command_events = ExtResource("6_18mgg")
snbx_logger = NodePath("../SandboxLogger")

[node name="WorldCanvas" type="Control" parent="."]
custom_minimum_size = Vector2(1300, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
script = ExtResource("9_ncfxj")
ui_events = ExtResource("9_ir58h")
interpolate = 1.0

[node name="SplashScreen" type="TextureRect" parent="WorldCanvas"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("10_23bjc")
expand_mode = 1
stretch_mode = 5
script = ExtResource("13_3b6nd")
gate_events = ExtResource("2_q7cvi")
command_events = ExtResource("6_18mgg")
ui_events = ExtResource("9_ir58h")
splash_screen = ExtResource("10_23bjc")

[node name="RenderResult" type="TextureRect" parent="WorldCanvas"]
texture_filter = 2
material = SubResource("ShaderMaterial_be6ex")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 5
stretch_mode = 5
script = ExtResource("5_nlg2s")
gate_events = ExtResource("2_q7cvi")
command_events = ExtResource("6_18mgg")
ui_events = ExtResource("9_ir58h")

[node name="HideOnPress" type="TextureButton" parent="WorldCanvas/RenderResult"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0

[node name="Blackout" type="Panel" parent="WorldCanvas"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ybg1t")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_sld6k")
}
script = ExtResource("18_sx3kr")
ui_events = ExtResource("9_ir58h")
gate_events = ExtResource("2_q7cvi")

[node name="NotResponding" parent="." instance=ExtResource("17_kwbm3")]
visible = false
layout_mode = 1

[connection signal="pressed" from="WorldCanvas/RenderResult/HideOnPress" to="." method="hide_ui"]
